Issue 11665: Replaced image button with normal html/css button, added i18n to it. Aligned upload buttons on 'add image' and 'external file' pages. Removed 'Latest uploads' link on 'add image' page due to new sorting on front page and thus duplication of functionality. Deleted example upload handler.
git-svn-id: https://svn.imcode.com/imcode/imcms/trunk@23402 bd66a97b-2aff-0310-9095-89ca5cabf5a6

--- a/src/main/web/css/image_archive.css
+++ b/src/main/web/css/image_archive.css
@@ -266,3 +266,33 @@ li.sel a {
     border:1px solid white;
     margin:10px 0 5px 0;
 }
+
+
+/* uploadify button */
+div.UploadifyButtonWrapper{
+    position:relative;
+    float: left;
+    margin-right: 5px;
+}
+
+/* fake button */
+div.UploadifyButtonWrapper button {
+    position:absolute; /* relative to UploadifyButtonWrapper */
+    top:0;
+    left:0;
+    z-index:0;
+    display:block;
+    float:left;
+}
+
+/* pass hover effects to button */
+div.UploadifyButtonWrapper a.Hover {
+    background:orange;
+    color:white;
+}
+
+/* position flash button above css button */
+div.UploadifyObjectWrapper {
+    position:relative;
+    z-index:10;
+}
